--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                        target="_blank"
                        class="w-full bg-pink-400 text-white font-bold py-3 px-6 rounded-xl text-lg hover:bg-pink-500 transition-transform transform hover:scale-105 shadow-lg flex items-center justify-center">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2"><path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z"></path><circle cx="12" cy="10" r="3"></circle></svg>
-                        Ver Local (Casa 10)
+                        Ver Local
                     </a>
                     <p class="text-gray-600 text-sm mt-2">
                         <br>
@@ -90,3 +90,4 @@
 
 </body>
 </html>
+
